# conventional-commit-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pixi.toml  pyproject.toml  sonar-project.properties
.claude/: settings.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  maintenance.yml  publish.yml  quality-monitoring.yml  release.yml  sonarqube.yml  stale.yml  update-pixi-lock-file.yml
docs/: medium_story_conventional_commit_hook.md
recipe/: recipe.yaml
scripts/: install_hooks.py
src/conventional_commit_hook/: __init__.py  main.py  parser.py  validator.py
tests/: conftest.py
tests/integration/: conftest.py  test_hook.py
tests/unit/: conftest.py  test_main.py  test_parser.py  test_validator.py
