[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "conventional-commit-hook"
version = "0.1.0"
description = "A pre-commit hook that enforces Conventional Commits standards on commit messages"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Kevin Mills", email = "millsks@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Quality Assurance",
  "Operating System :: OS Independent",
]
keywords = ["conventional-commits", "pre-commit", "git-hooks", "commit-messages"]
dependencies = [
  "structlog>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/millsks/conventional-commit-hook"
Issues = "https://github.com/millsks/conventional-commit-hook/issues"
Documentation = "https://github.com/millsks/conventional-commit-hook#readme"

[project.scripts]
conventional-commit-hook = "conventional_commit_hook.main:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/conventional_commit_hook"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/recipe",
  "/README.md",
  "/pyproject.toml",
  "/pixi.toml",
  "/CHANGELOG.md",
  "/.pre-commit-hooks.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --tb=short"
markers = [
  "integration: marks tests as integration tests requiring real I/O or subprocesses",
]

[tool.coverage.run]
source = ["conventional_commit_hook"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["conventional_commit_hook"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
pretty = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["structlog.*"]
ignore_missing_imports = true

[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

"""
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {% if commit.scope %}**{{commit.scope}}**: {% endif %}{{ commit.message | upper_first }}\
    {% endfor %}
{% endfor %}\n
"""
footer = """
<!-- generated by git-cliff -->
"""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_parsers = [
  { message = "^feat", group = "Features" },
  { message = "^fix", group = "Bug Fixes" },
  { message = "^doc", group = "Documentation" },
  { message = "^perf", group = "Performance" },
  { message = "^refactor", group = "Refactoring" },
  { message = "^style", group = "Styling" },
  { message = "^test", group = "Testing" },
  { message = "^build", group = "Build" },
  { message = "^chore\\(release\\): prepare for", skip = true },
  { message = "^chore\\(deps.*\\)", skip = true },
  { message = "^chore|^ci", group = "Miscellaneous Tasks" },
  { body = ".*security", group = "Security" },
  { message = "^revert", group = "Revert" },
  { message = "^Merge branch", skip = true },
  { message = "^Release v", skip = true },
]
protect_breaking_commits = false
filter_commits = false
tag_pattern = "v[0-9].*"
topo_order = false
sort_commits = "oldest"
